# banana-spaces

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  knowledge_base.db  pytest.ini  requirements.txt  run.sh
.cursor/rules/: project.mdc
api/: main.py  routes.py
core/: extractor.py  llm_client.py  logger.py  prompts.py  retriever.py  schemas.py
db/: crud.py  database.py  models.py
demo/seed_data/: blagorodnye_metally.txt  katolit.txt  obessolivanie.txt  shahtnye_vody.csv
docs/: PLAN_SHORT.md  nauchny_klubok_top1_tz.md  project_structure.md
frontend/: app.py
parsers/: document_parser.py  text_chunker.py
scripts/: check_db.py  clean_db.py  e2e_smoke.py  ingest_data.py  seed_demo.py  test_db.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/src/scientific_tangle_gateway/: __init__.py  answer_builder.py  audit_middleware.py  audit_repository.py  claims.py  config.py  embeddings.py  extractor.py  graph.py  ingestion.py  main.py  normalization.py  query_ir.py  retrieval_engine.py  routes_audit.py  routes_export.py  routes_ingestion.py  routes_retrieval.py  schemas.py  task_repository.py  task_worker.py  yandex_client.py
services/gateway/src/scientific_tangle_gateway/dictionaries/: equipment.yaml  materials.yaml  processes.yaml
services/gateway/tests/: test_extractor.py  test_health.py  test_ingestion.py  test_query_ir.py  test_retrieval.py
tests/: conftest.py  test_database_crud.py  test_extraction.py  test_extractor.py  test_retriever.py  test_schemas.py  test_text_chunker.py
(+13 files in other folders)
