[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-tangle-gateway"
version = "0.2.0"
description = "ScientificTangle Gateway — evidence-first R&D knowledge map"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "psycopg[binary]>=3.2.0",
  "pypdf>=5.8.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "pyyaml>=6.0",
  "openpyxl>=3.1.0",
  "python-docx>=1.1.0",
  "neo4j>=5.20.0",
  "numpy>=1.26.0"
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=3.0.0"
]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.12.0",
  "sentence-transformers>=3.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
